--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "festivalmusic",
+  "name": "Divisione",
   "version": "1.0.0",
-  "description": "FestivalMusica",
+  "description": "Divisione",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
