--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
     "gulp-webp": "^4.0.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "sass": "^1.37.5"
+  },
+  "dependencies": {
+    "gulp-terser-js": "^5.2.2"
   }
 }
